src/test/deca/syntax/invalid/double_OBRACE.deca
//  Description :
//            Deux { au début du fichier et un seul } à la fin
//
// Résultat:
//mismatched input '{'
//
{ {
    println("Hello") ; 
}    